examples/sample-product-chart/chart-test/reports/run-full-bench-20260609-085346/scenario-service-mesh-istio-ingress-gateway-jwt-20260609-101922/artifacts/manifests/istio-gateways.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: Gateway
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"Gateway","metadata":{"annotations":{},"name":"sample-igw","namespace":"sample"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["sample.test.local"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}
    creationTimestamp: "2026-06-09T14:20:03Z"
    generation: 1
    name: sample-igw
    namespace: sample
    resourceVersion: "662"
    uid: 3f13a0df-c51a-45a5-ad3b-d755e2c52058
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - sample.test.local
      port:
        name: http
        number: 80
        protocol: HTTP
kind: List
metadata:
  resourceVersion: ""
