examples/sample-product-chart/chart-test/reports/run-full-bench-20260609-085346/scenario-service-mesh-istio-ingress-gateway-jwt-20260609-101922/artifacts/manifests/istio-virtualservices.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"name":"sample-vs","namespace":"sample"},"spec":{"gateways":["sample-igw"],"hosts":["sample.test.local"],"http":[{"match":[{"uri":{"prefix":"/"}}],"route":[{"destination":{"host":"sample.sample.svc.cluster.local","port":{"number":80}}}]}]}}
    creationTimestamp: "2026-06-09T14:20:03Z"
    generation: 1
    name: sample-vs
    namespace: sample
    resourceVersion: "663"
    uid: fa01271b-35f6-41d9-b584-8aedb274f837
  spec:
    gateways:
    - sample-igw
    hosts:
    - sample.test.local
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: sample.sample.svc.cluster.local
          port:
            number: 80
kind: List
metadata:
  resourceVersion: ""
